--- a/index.html
+++ b/index.html
@@ -285,18 +285,13 @@
             </h2>
           </div>
 
-          <div class="text-center mb-6 flex flex-row justify-center gap-2">
+          <div class="text-center flex flex-row justify-center gap-8">
             <div class="flex flex-col">
               <h2
                 class="text-[50px] font-medium against-font text-[#d4b051] animate-zoom-in"
               >
-                AR
+                A
               </h2>
-              <h3
-                class="text-lg font-regular fraunces-font-italic text-[#d4b051] animate-fade-in-top-down"
-              >
-                Aswar & Rahmah
-              </h3>
             </div>
             <div class="flex justify-center items-center">
               <img
@@ -311,15 +306,16 @@
               <h2
                 class="text-[50px] font-medium against-font text-[#d4b051] animate-zoom-in"
               >
-                AK
+                R
               </h2>
-              <h3
-                class="text-lg font-regular fraunces-font-italic text-[#d4b051] animate-fade-in-top-down"
-              >
-                Asriati & Khaidir
-              </h3>
             </div>
           </div>
+
+          <h1
+            class="text-[#d4b051] mb-6 fraunces-font-italic text-3xl animate-fade-in-top-down"
+          >
+            Aswar & Rahmah
+          </h1>
 
           <div
             class="text-center mb-6 text-xl fraunces-font text-white animate-fade-in-bottom-up"
@@ -403,18 +399,13 @@
           </h2>
         </div>
 
-        <div class="text-center mb-6 flex flex-row justify-center gap-2">
+        <div class="text-center flex flex-row justify-center gap-8">
           <div class="flex flex-col">
             <h2
               class="text-[50px] font-medium against-font text-[#d4b051] animate-zoom-in"
             >
-              AR
+              A
             </h2>
-            <h3
-              class="text-lg font-regular fraunces-font-italic text-[#d4b051] animate-fade-in-top-down"
-            >
-              Aswar & Rahmah
-            </h3>
           </div>
           <div class="flex justify-center items-center">
             <img
@@ -429,15 +420,16 @@
             <h2
               class="text-[50px] font-medium against-font text-[#d4b051] animate-zoom-in"
             >
-              AK
+              R
             </h2>
-            <h3
-              class="text-lg font-regular fraunces-font-italic text-[#d4b051] animate-fade-in-top-down"
-            >
-              Asriati & Khaidir
-            </h3>
           </div>
         </div>
+
+        <h1
+          class="text-[#d4b051] mb-6 text-center fraunces-font-italic text-3xl animate-fade-in-top-down"
+        >
+          Aswar & Rahmah
+        </h1>
 
         <div
           class="text-center mb-6 text-xl fraunces-font text-white animate-fade-in-bottom-up"
@@ -882,10 +874,10 @@
           </div>
           <div
             class="overflow-hidden rounded-md"
-            onclick="openModal('prewed7.jpg')"
+            onclick="openModal('prewed5.jpg')"
           >
             <img
-              src="prewed7.jpg"
+              src="prewed5.jpg"
               alt="Gallery Image 5"
               class="w-full h-full object-cover animate-zoom-in"
             />
